public/styles/main.css
*{
  box-sizing: border-box;
}

a{
  text-decoration: none;
}

body{
  /*background-image: url("assets/drop1.jpg");
  background-size: cover;*/
  font-family: helvetica;
  margin: 0;
}

input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
    -webkit-appearance: none;
    appearance: none;
}

input[type="number"].box_wrapper::-webkit-input-placeholder {
    background-color: white;
    color: grey;
    font-weight: 300;
}

ul{
  display: inline-block;
  padding: 1em;
  list-style: none;
}

table, tbody, tr, td {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

td:nth-child(-3n+6){
  border-right: solid 6px black;
}

tr:nth-child(-3n+6){
  border-bottom: solid 6px black;
}

.body_area{
  height: 38em;
}

.header_Bar{
  height: 6.5em;
  margin-top: 0;
}

.main_Title{
  display: inline-block;
  font-size: 3em;
  margin-top: .5em;
  margin-left: 16%;
  width: auto;
  z-index: 0;
  text-shadow: 0 1px 0 #ccc,
               0 2px 0 #c9c9c9,
               0 3px 0 #bbb,
               0 4px 0 #b9b9b9,
               0 5px 0 #aaa,
               0 6px 1px rgba(0,0,0,.1),
               0 0 5px rgba(0,0,0,.1),
               0 1px 3px rgba(0,0,0,.3),
               0 3px 5px rgba(0,0,0,.2),
               0 5px 10px rgba(0,0,0,.25),
               0 10px 10px rgba(0,0,0,.2),
               0 20px 20px rgba(0,0,0,.15);
}

.header_GraphicsLeft{
  display: block;
  float: left;
  margin: 0;
  width: 6em;
}

.sudoku_link{
  float: right;
  height: 3em;
  margin-top: .2em;
}

.sudoku_label{
  display: inline-block;
  font-size: .9em;
  margin-top: 0;
  margin-left: .5em;
  margin-right: .5em;
  text-decoration: underline;
  vertical-align: middle;
}

.nav_button {
  color: darkgrey;
  transition: color 0.8s ease;
}

.nav_button:hover {
  color: #FFA726;
}

.header_GraphicsRight{
  display: block;
  float: right;
  /*margin-right: .7em;*/
  margin-right: 0;
  width: 6em;
  z-index: 1;
}

.box_wrapper {
  background-color: skyblue;
  color: black;
  border: dimgrey solid 1px;
  font-size: 2.5em;
  font-weight: 700;
  height: auto;
  margin: 0;
  padding: 0;
  text-align: center;
  width: 1.4em;
}

.footer_wrapper {
  background: white;
  margin: 0;
  height: 6.1em;
  width: 100%;
  bottom: 0;
  position: fixed;;
}

.our_name{
  color: magenta;
}

.footer_text{
  display: inline-block;
  margin: 0;
  white-space: pre;
}

.copyright_text{
  margin: 0;
  white-space: pre;
}

.grid_wrapper {
  display: inline-block;
  min-height: auto;
  margin: 0 auto;
  margin-top: 1em;
  width: 29em;
}

.user_box{
  background-color: white;
  border-top: lightgrey 10px solid;
  border-left: #999999 10px solid;
  border-right: #222222 10px solid;
  border-bottom: #222222 10px solid;
  display: inline-block;
  height: auto;
  margin-left: 5em;
  margin-top: 2em;
  margin-right: 8em;
  padding: 1em;
  width: 30em;
  vertical-align: top;
}

.info_text{
  font-size: 1em;
  text-indent: 1em;
}

.solve_button{
  border-top: #999999 4px solid;
  border-left: #999999 4px solid;
  border-right: #222222 4px solid;
  border-bottom: #222222 4px solid;
  background-color: grey;
  font-family: "arial", sans-serif;
  font-size: 12pt;
  color: white;
  font-weight: bold;
  height: 2.5em;
  margin-left: 5.5em;
  width: 5em;
}

.reset_button{
  background-color: slategrey;
  border-top: lightgrey 4px solid;
  border-left: lightgrey 4px solid;
  border-right: #222222 4px solid;
  border-bottom: #222222 4px solid;
  color: white;
  font-size: 12pt;
  font-weight: bolder;
  margin-left: 5.5em;
  height: 2.5em;
  width: 5em;
}

.puzzle_error{
  background-color: red;
  color: white;
  height: auto;
  margin-top: 1em;
  padding: 1em;
  text-align: center;
}

.puzzle_solved{
  background-color: lightgreen;
  color: black;
  margin-top: 1em;
  padding: 1em;
  text-align: center;
}

.counter_display{
  font-size: 10pt;
  text-align: center;
  white-space: pre;
}

@media screen and (max-width: 1280px) and (min-width: 1153px) {

  .body_area{
    height: auto;
  }

  .header_GraphicsRight{
    margin-right: 0;
  }
}

@media screen and (max-width: 1152px) and (min-width: 519px) {

  .user_box{
    margin-left: 1em;
    margin-top: .5em;
    margin-right: 3em;
  }

  .body_area{
    height: 26.5em;
  }

  .header_GraphicsRight{
    margin-right: 0;
  }
}

@media screen and (max-width: 1151px) and (min-width: 517px) {

  .body_area{
    height: 81em;
  }

  .user_box{
    margin-left: 3em;
    padding: .8em;
    width: auto;
  }

  .info_text{
    font-size: 1.8em;
    text-indent: 1em;
    margin: 0;
  }

  .solve_button{
    font-size: 20pt;
    height: 3em;
    margin-left: 7em;
    margin-top: 1em;
    padding: 0;
    width: 6em;
  }

  .reset_button{
    font-size: 20pt;
    height: 3em;
    margin-left: 7em;
    padding: 0;
    width: 7em;
  }

  .puzzle_solved{
    font-size: 20pt;
    margin: 0 auto;
    margin-top: .2em;
    padding: .5em;
    text-align: center;
    width: auto;
    vertical-align: middle;
  }

  .counter_display{
    font-size: 20pt;
    margin-bottom: .1em;
    margin-top: .1em;
  }

  .grid_wrapper {
    margin-left: 5em;
    margin-top: 2em;
  }

  .box_wrapper {
    font-size: 2.8em;
  }

@media only screen
and (min-device-width : 481px)
and (max-device-width : 800px) {

  .body_area{
    height: 95em;
  }

  .main_Title{
    font-size: 3em;
    margin-left: 2em;
  }

  .sudoku_link{
    float: right;
    height: 3em;
    margin-top: .2em;
    margin-right: .2em;
    width: 6em;
  }

  .fa-github{
    color: darkgrey;
    float: right;
    margin-right: 1em;
    transition: color 0.8s ease;
  }

  .sudoku_label{
    font-size: 1.5em;
    margin-right: 1em;
    margin-top: 0;
  }

  .user_box{
    font-size: 1.3em;
    margin-top: 2em;
  }

  .solve_button{
    margin-top: 1em;
  }

  .reset_button{
    margin-top: 1em;
  }

  .grid_wrapper {
    margin-top: .5em;
    margin-left: 0em;
  }

  .box_wrapper {
    font-size: 4.77em;
  }

  .our_name{
    color: magenta;
    font-size: 1.8em;
  }

  .footer_text{
    display: inline-block;
    font-size: 1.3em;
    margin: 0;
    white-space: pre;
  }

  .copyright_text{
    font-size: 1em;
    margin: 0;
    margin-bottom: 2em;
    text-align: center;
  }
}

@media only screen
and (min-device-width : 320px)
and (max-device-width : 480px) {

    .body_area{
      height: 95em;
      width: 100%;
    }

    .main_Title{
      font-size: 3em;
      margin-left: 2em;
    }

    .sudoku_link{
      float: right;
      height: 3em;
      margin-top: .2em;
      margin-right: .2em;
      width: 6em;
    }

    .fa-github{
      color: darkgrey;
      float: right;
      margin-right: 1em;
      transition: color 0.8s ease;
    }

    .sudoku_label{
      font-size: 1.5em;
      margin-right: 1em;
      margin-top: 0;
    }

    .user_box{
      font-size: 1.3em;
      margin-top: 2em;
    }

    .solve_button{
      margin-top: 1em;
    }

    .reset_button{
      margin-top: 1em;
    }

    .grid_wrapper {
      margin-top: .5em;
      margin-left: .5em;
    }

    .box_wrapper {
      font-size: 4.7em;
    }

    .our_name{
      color: magenta;
      font-size: 1.8em;
    }

    .footer_text{
      display: inline-block;
      font-size: 1.3em;
      margin: 0;
      white-space: pre;
    }

    .copyright_text{
      font-size: 1em;
      margin: 0;
      margin-bottom: 2em;
      text-align: center;
    }

  }

